--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cursive = {version = "0.20.0", features = ["toml"]}
+cursive = { version = "0.20.0", features = ["toml"] }
+invidious = "0.4.0"
+tokio = { version = "1.21.2", features = ["full"] }
